--- a/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj
+++ b/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj
@@ -132,6 +132,9 @@
   <ItemGroup>
     <ClCompile Include="Re_Computer_Graphics_Task.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="graphics.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
