render banana picture by j3a file

--- a/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj
+++ b/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj
@@ -130,10 +130,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="j3a.cpp" />
     <ClCompile Include="Re_Computer_Graphics_Task.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graphics.h" />
+    <ClInclude Include="shader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
