--- a/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj.filters
+++ b/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj.filters
@@ -15,12 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="j3a.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="Re_Computer_Graphics_Task.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graphics.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="shader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
