--- a/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj
+++ b/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="graphics.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="triMesh.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
