--- a/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj.filters
+++ b/Re_Computer_Graphics_Task/Re_Computer_Graphics_Task.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="stb_image.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="triMesh.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
